# Fathom

./: .gitignore  BRAND_NAMES.md  BUSINESS_SPEC.md  Cargo.toml  IDEA_REPORT.md  README.md
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  main.rs
crates/api/src/routes/: inventory.rs  mod.rs  oracles.rs  vault.rs
crates/api/tests/: inventory.rs  oracles.rs  static_routes.rs  vault.rs
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 0001_oracle_events.sql  0002_predict_state.sql  0003_strike_matrix_state.sql
crates/indexer/src/: config.rs  lib.rs  main.rs  object_state.rs  pipeline.rs  postgres.rs  row.rs  sink.rs  strike_matrix.rs
crates/indexer/tests/: postgres_integration.rs  predict_state_integration.rs  strike_matrix_integration.rs
crates/pricing/: Cargo.toml
crates/pricing/src/: digital.rs  fixture.rs  invariants.rs  lib.rs
crates/pricing/tests/: fuzz_no_panic.rs  golden_vectors.rs
crates/types/: Cargo.toml
crates/types/src/: events.rs  fixed.rs  lib.rs  scale.rs  svi.rs
docs/architecture/: data-flow.mmd  module-dependency.mmd  overview.md
docs/security/: threat-model.md
docs/specs/: 2026-05-28-sui-transparency-hub-architecture.md
docs/superpowers/plans/: 2026-06-15-pricing-validator.md  2026-06-16-indexer-scaffold.md  2026-06-20-postgres-sink.md  2026-06-21-object-poller.md  2026-06-21-per-strike-inventory.md  2026-06-22-plp-risk-dashboard.md
docs/superpowers/specs/: 2026-06-02-pricing-validator-design.md  2026-06-16-indexer-scaffold-design.md  2026-06-19-postgres-sink-design.md  2026-06-21-object-poller-design.md  2026-06-21-per-strike-inventory-design.md  2026-06-21-plp-risk-dashboard-design.md
pricing/: scripts-golden-corpus.mjs
pricing/fixtures/: golden-binary-price.json  golden-corpus.json
web/: package-lock.json  package.json  tailwind.config.ts
web/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  index.css  theme.test.ts  theme.ts
web/src/components/: InventoryHeatmap.test.tsx  InventoryHeatmap.tsx  OracleTable.test.tsx  OracleTable.tsx  TopBar.tsx  VaultHealth.test.tsx  VaultHealth.tsx
web/src/components/ui/: DepthBar.tsx  SanityChip.tsx
web/src/lib/: heatmap.test.ts  heatmap.ts
