[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
pricing = { path = "../pricing" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
# Live ingestion wiring (Phase B). Pinned to a buildable mainline rev confirmed
# against the real API (Processor/Service surface differs from v1.72 sketch):
# sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "2e196df64878a6ee6786cf739474e8bf4a85f726" }

[dev-dependencies]
bcs = "0.1"
