[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
pricing = { path = "../pricing" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
# Live ingestion wiring (Phase B). Pinned to a mainline rev whose real API was
# confirmed against source (the v1.72 Service::builder sketch never existed; we
# drive IngestionService directly). default-features=false drops the `cluster`
# feature (Postgres/diesel) we don't need for the stdout A-path.
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", rev = "2e196df64878a6ee6786cf739474e8bf4a85f726", default-features = false }
prometheus = "0.14"
url = "2.3.1"
# Network-tip discovery: the public testnet checkpoint bucket publishes no
# `_metadata/watermark` blob, so the framework's `latest_checkpoint_number()`
# returns 0 (→ backfill from genesis). We read the tip from the fullnode's
# JSON-RPC `sui_getLatestCheckpointSequenceNumber` instead. rustls-only to avoid
# pulling native-tls/openssl into the build.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
# Postgres sink. rustls-only (no openssl). Runtime query() — NO query! macro,
# so build/CI need no live DB. migrate! embeds the migrations dir at build time.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"] }

[dev-dependencies]
bcs = "0.1"
